<?xml version="1.0" encoding="utf-8"?>
<resources>
	<string name="ep_name">Strata University</string>
    <string name="app_name">@string/ep_name</string>
    <string name="error_dialog_default_title">Alert</string>
    <string name="retry_dialog_button">Retry</string>
    <string name="progress_dialog_default_title">@string/ep_name</string>
    <string name="progress_dialog_default_message">Processing request...</string>
    <string name="none">None</string>
    <string name="loading_">loading...</string>
    
    <string name="last_updated_date_format">E MMM d, yyyy h:mm:ss a</string>
    
    <!-- errors -->
    <string name="e_unhandled_exception">An unknown error has occurred</string>
    <string name="e_invalid_login">Incorrect username and/or password</string>
    <string name="e_network_timeout">Your request has timed out</string>
    <string name="e_no_login_provided">You must provide both a username and password</string>
    
    <!-- Labels -->
    <string name="comments_label">Comments:</string>
    <string name="dropbox_comments_label">Comments (%s): </string>
    <string name="grade_comments_label">Comments:&amp;nbsp;</string>
    <string name="letter_grade_label">Letter Grade: </string>
    <string name="points_label">Points: </string>
    <string name="view_all_course_grades">View All Course Grades</string>
    <string name="d_total_reponses">%d total responses</string>
    <string name="d_responses_by_you">%d responses by you</string>
    <string name="d_total_reponse">%d total response</string>
    <string name="d_response_by_you">%d response by you</string>
    <string name="no_responses">No responses</string>
    <string name="never">Never</string>
    <string name="last_updated_s">Last updated: %s</string>
    <string name="choose_a_course">Choose a Course</string>
    <string name="choose_a_unit">Choose a Unit</string>
    <string name="choose_a_role">Choose a Role</string>
    <string name="all_courses">All Discussions</string>
    <string name="all_roles">All</string>
    <string name="student_role">Students</string>
    <string name="instructor_role">Instructors</string>
    <string name="no_items">No items</string>
    <string name="post_a_response">Post a response</string>
    <string name="post_a_response_to_s">Post a response to %s</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="subject">Subject</string>
    <string name="no_instructor">No instructor listed</string>
    <string name="no_announcements">No new announcements</string>
    <string name="username">Username</string>
    <string name="student_id">Student ID</string>
    <string name="password">Password</string>
    <string name="keep_me_logged_in">Keep me logged in</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_out">Sign Out</string>
    <string name="my_profile">My Profile</string>
    <string name="courses">Courses</string>
    <string name="my_courses">My Courses</string>
    <string name="announcements">Announcements</string>
    <string name="gradebook">Gradebook</string>
    <string name="thread_topics">Thread Topics</string>
    <string name="no_grade">Not Graded</string>
    <string name="no_gradebook_items">No Gradebook Items</string>
    <string name="grade">Grade</string>
    <string name="grade_value">Grade: %s</string>
    <string name="course_discussions_title">Discussion Topics</string>
    <string name="announcement">Announcement</string>
    <string name="no_comments">No comments</string>
    <string name="dropbox_submission">Dropbox Submission</string>
    <string name="view_all_course_submissions">View All Course Dropbox Submissions</string>
    <string name="view_all_course_announcements">View All Course Announcements</string>
    <string name="view_all_course_people">View All People in Course</string>
    <string name="people">People</string>
    <string name="person_profile">Profile</string>
    <string name="letter_grade_s">Letter Grade: %s</string>
    <string name="numeric_grade_s">Numeric Grade: %s</string>
    
    <!--  list item -->
    <string name="li_no_items">No Items</string>
    <string name="li_loading">Loading...</string>
    <string name="li_load_more">Load more...</string>
    <string name="li_error">Error loading items</string>
    
</resources>
