<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:padding="10dp">
    <ImageView
		android:id="@+id/school_logo"
		android:layout_width="wrap_content"
		android:layout_height="wrap_content"
		android:layout_centerHorizontal="true"
		android:layout_marginTop="15dp"
		android:layout_marginBottom="15dp"
		android:layout_alignParentTop="true"
		android:src="@drawable/logo_large"/>
	 <LinearLayout	
	 	android:id="@+id/login_box"
	 	android:orientation="vertical"
		android:layout_width="fill_parent"
		android:layout_height="wrap_content"
		android:layout_marginLeft="8dp"
		android:layout_marginRight="8dp"
		android:layout_marginTop="5dp"
		android:layout_marginBottom="5dp"
		android:layout_below="@id/school_logo"
		android:padding="8dp"
		android:background="@drawable/rounded_semi_transparent_background">
		 <TextView
		 	android:id="@+id/username_label"
		 	android:text="@string/username"
		 	style="@style/TextAppearance.Label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content" />
		 	
		<EditText  
			android:id="@+id/username_text"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		    android:layout_marginTop="4dp" 
		    android:hint="@string/student_id"/>
		     	
		<TextView
		 	android:id="@+id/password_label"
		 	android:text="@string/password"
		 	style="@style/TextAppearance.Label"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
		    android:layout_marginTop="4dp" />
		 	
		<EditText  
			android:id="@+id/password_text"
			android:layout_width="fill_parent"
			android:layout_height="wrap_content"
		    android:layout_marginTop="4dp" 
		    android:hint="@string/password"
		    android:password="true" />
		<CheckBox
			android:id="@+id/remember_check"
		    android:layout_width="fill_parent" 
		    android:layout_height="wrap_content" 
		    android:layout_marginTop="4dp"
		    android:hint="@string/keep_me_logged_in" />
    </LinearLayout>
	<Button
		android:id="@+id/login_button"
	    android:layout_width="fill_parent" 
	    android:layout_height="wrap_content"
	    android:layout_marginTop="4dp" 
	    android:text="@string/sign_in"
	    android:onClick="onLoginClick"
		android:layout_below="@id/login_box"
		android:layout_alignLeft="@id/login_box"
		android:layout_alignRight="@id/login_box"
		/>
</RelativeLayout>